--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-VITE_APPWRITE_URL="https://cloud.appwrite.io/v1"
-VITE_APPWRITE_PROJECT_ID="659d3952072c17140023"
-VITE_APPWRITE_DATABASE_ID="659d3aa3185d47704151"
-VITE_APPWRITE_COLLECTION_ID="659d3ae469867261c1cb"
-VITE_APPWRITE_BUCKET_ID="659d3c84ddc19b6211b3"
+VITE_APPWRITE_URL=""
+VITE_APPWRITE_PROJECT_ID=""
+VITE_APPWRITE_DATABASE_ID=""
+VITE_APPWRITE_COLLECTION_ID=""
+VITE_APPWRITE_BUCKET_ID=""
